--- a/Templates/Template.Mobile/Resources/Dictionaries/Values.xaml
+++ b/Templates/Template.Mobile/Resources/Dictionaries/Values.xaml
@@ -5,17 +5,20 @@
 
     <!--  Platform Specifics  -->
 
-    <OnPlatform x:Key="ToolbarHeight" x:TypeArguments="GridLength">
+    <OnPlatform x:Key="ToolbarHeight"
+                x:TypeArguments="GridLength">
         <On Platform="iOS">140</On>
         <On Platform="Android">120</On>
     </OnPlatform>
 
-    <OnPlatform x:Key="HeaderHeight" x:TypeArguments="GridLength">
+    <OnPlatform x:Key="HeaderHeight"
+                x:TypeArguments="GridLength">
         <On Platform="iOS">40</On>
         <On Platform="Android">40</On>
     </OnPlatform>
 
-    <OnPlatform x:Key="BottomBarHeight" x:TypeArguments="GridLength">
+    <OnPlatform x:Key="BottomBarHeight"
+                x:TypeArguments="GridLength">
         <On Platform="iOS">65</On>
         <On Platform="Android">65</On>
     </OnPlatform>
@@ -31,32 +34,6 @@
             </OnPlatform>
         </Thickness.Top>
     </Thickness>
-
-    <!--  Generic Thickness  -->
-
-    <Thickness x:Key="SmallThickness"
-               Bottom="{StaticResource SmallPadding}"
-               Left="{StaticResource SmallPadding}"
-               Right="{StaticResource SmallPadding}"
-               Top="{StaticResource SmallPadding}" />
-
-    <Thickness x:Key="MediumThickness"
-               Bottom="{StaticResource MediumPadding}"
-               Left="{StaticResource MediumPadding}"
-               Right="{StaticResource MediumPadding}"
-               Top="{StaticResource MediumPadding}" />
-
-    <Thickness x:Key="StandardThickness"
-               Bottom="{StaticResource StandardPadding}"
-               Left="{StaticResource StandardPadding}"
-               Right="{StaticResource StandardPadding}"
-               Top="{StaticResource StandardPadding}" />
-
-    <Thickness x:Key="SmallTopThickness" Top="{StaticResource SmallPadding}" />
-
-    <Thickness x:Key="MediumTopThickness" Top="{StaticResource MediumPadding}" />
-
-    <Thickness x:Key="StandardTopThickness" Top="{StaticResource StandardPadding}" />
 
     <!--  Generic Padding  -->
 
@@ -80,5 +57,36 @@
     <x:Double x:Key="ListViewSingleLineHeight">48</x:Double>
     <x:Double x:Key="ListViewTwoLinesHeight">72</x:Double>
     <x:Double x:Key="ListViewThreeLinesHeight">88</x:Double>
+
+    <!--  Generic Thickness  -->
+
+    <Thickness x:Key="SmallThickness"
+               Bottom="{StaticResource SmallPadding}"
+               Left="{StaticResource SmallPadding}"
+               Right="{StaticResource SmallPadding}"
+               Top="{StaticResource SmallPadding}" />
+
+    <Thickness x:Key="MediumThickness"
+               Bottom="{StaticResource MediumPadding}"
+               Left="{StaticResource MediumPadding}"
+               Right="{StaticResource MediumPadding}"
+               Top="{StaticResource MediumPadding}" />
+
+    <Thickness x:Key="StandardThickness"
+               Bottom="{StaticResource StandardPadding}"
+               Left="{StaticResource StandardPadding}"
+               Right="{StaticResource StandardPadding}"
+               Top="{StaticResource StandardPadding}" />
+
+    <Thickness x:Key="SmallTopThickness"
+               Top="{StaticResource SmallPadding}" />
+
+    <Thickness x:Key="MediumTopThickness"
+               Top="{StaticResource MediumPadding}" />
+
+    <Thickness x:Key="StandardTopThickness"
+               Top="{StaticResource StandardPadding}" />
+
+
 
 </ResourceDictionary>
