--- a/Templates/Template.Mobile/Views/ContentViews/PushSetupPage.xaml
+++ b/Templates/Template.Mobile/Views/ContentViews/PushSetupPage.xaml
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:ContentPageBase x:Class="Template.Mobile.Views.PushSetupPage"
+<views:ContentViewBase x:Class="Template.Mobile.Views.PushSetupPage"
                        xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                        xmlns:d="http://xamarin.com/schemas/2014/forms/design"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                        xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
-                       Title="Setup"
                        mc:Ignorable="d">
 
-    <ContentPage.Content>
+    <ContentView.Content>
         <TableView Intent="Form">
             <TableRoot>
                 <TableSection Title="Registration">
@@ -42,5 +41,5 @@
                 </TableSection>
             </TableRoot>
         </TableView>
-    </ContentPage.Content>
-</views:ContentPageBase>
+    </ContentView.Content>
+</views:ContentViewBase>
