--- a/ItemTemplate_BlankPage/BlankPage.xaml
+++ b/ItemTemplate_BlankPage/BlankPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:ContentPageBase x:Class="Template.Mobile.Views.BlankPage"
+<views:ContentPageBase x:Class="$rootnamespace$.Views.$safeitemname$"
                        xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                        xmlns:materialFrame="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
-                       xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
-                       xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
-                       Title="{Binding [BlankPage_Title]}"
-                       x:DataType="viewModels:BlankViewModel">
+                       xmlns:viewModels="clr-namespace:$rootnamespace$.ViewModels;assembly=$rootnamespace$"
+                       xmlns:views="clr-namespace:$rootnamespace$.Views;assembly=$rootnamespace$"
+                       Title="{Binding [$safeitemname$_Title]}"
+                       x:DataType="viewModels:$viewmodelName$">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="16"
